--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -306,6 +306,7 @@ button span {margin-left: 5px;}
 .userZone{
 	padding: 40px 15px !important;
 	display: inline-block;
+	border: 2px solid #fff;
 }
 .userZone:hover,
 .userZone:focus {border: 2px solid;
