--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -556,8 +556,18 @@
 	text-align:right;
 	padding:2em 0em;
 }
+
 /*----------------------------------------------*\
 		$FINISH PAGE
 \*----------------------------------------------*/
 .survey-finish-content {text-align: center;
     margin-top: 130px;}
+
+/*----------------------------------------------*\
+		$STATE PAGE
+\*----------------------------------------------*/
+.survey-state-content {text-align: center;
+    margin-top: 130px;}
+.survey-state-content > h1 {font-size: 2.2em;}
+.survey-state-content > p {font-size: 1.2em;}	
+	
