scroll focus issue solved

--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -11,6 +11,7 @@
 	font-family: 'arthurbecker';
 }
 .body-content .content{
+	display: inline-block;
 	background:url(../img/content-bg-top.gif) left top  repeat-x;
 	min-height:35em;/*TEST*/
 	clear:both;
