--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -12,6 +12,7 @@
 }
 .body-content .content{
 	display: inline-block;
+	width: 100%;
 	background:url(../img/content-bg-top.gif) left top  repeat-x;
 	min-height:35em;/*TEST*/
 	clear:both;
