--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -28,11 +28,12 @@ body {margin-bottom: 135px !important;}
 .left {text-align: left !important;}
 .right {text-align: right !important;}
 .hidden {display:none;}
+.float-left{float: left !important;}
 .margin-bottom-10 {margin-bottom: 10px;}
 .margin-top-40{margin-top: 40px;}
 .icon-small i {font-size: 1.4em;}
 .nav-tabs-right {padding-right: 20px;
-	margin-top: -40px;}
+	/*margin-top: -40px;*/}
 .nav-tabs-right li {float: right !important;
 	margin-bottom: -2px !important;}
 .nav-tabs-right li a {border-width: 2px !important;}
@@ -322,6 +323,7 @@ button span {margin-left: 5px;}
 .title-content {border-bottom: 1px solid #eee;
 	padding-bottom: 20px;}
 .title-content-no-underline {margin: 0 4%;}
+.title-content-no-underline h2 {float: left;}
 .content {margin: 10px 4% 0px;}
 .row-menu {/*width: 70%;
 	left: 15%;
