--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -20,7 +20,7 @@
 \*----------------------------------------------*/
 html {position: relative;
   min-height: 100%;}
-body {margin-bottom: 135px !important;}  
+body {margin-bottom: 150px !important;}  
   
 .centered {margin: 0 auto;}
 .center {text-align: center;}
@@ -790,7 +790,8 @@ ul.pagination li.active a {color: #fff !important;}
 	border:none;
 	background-color: transparent;
 	width: 100%;
-	height: 26px;}
+	height: 26px;
+	padding: 0 7px;}
 .survey-section-title-selected, 
 .survey-section-title-unselected:hover, 
 .survey-section-title-unselected:focus {
@@ -801,7 +802,9 @@ ul.pagination li.active a {color: #fff !important;}
 	color: #000;
 	width: 100%;
 	padding: 5px;
-	border-radius: 5px;}
+	border-radius: 5px;
+	padding: 0 5px;
+	height: 26px;}
 .panel-section-buttons {float: right;}
 .panel-section .panel-heading a {color: #fff;}
 .panel-section .panel-heading a:hover, .panel-section .panel-heading a:focus {color: #70FFFF;}
@@ -1047,7 +1050,8 @@ ul.pagination li.active a {color: #fff !important;}
 .option-item .circle-info {}
 .option-title {width: 70% !important;
     margin: 0px 5px;
-    height: 28px !important;}
+    height: 28px !important;
+    padding: 0 !important;}
 .option-icons button {margin: 0px 3px;}
 .btn-plus-small {font-size: 1.3em;}
 .btn-plus-small:hover {cursor:pointer;}
@@ -1117,7 +1121,8 @@ div.rules-frame > div.nav-config > ul > li > button.active > span {background-co
 .logic-option {margin: 5px 0;
 	text-align: center;}
 .logic-option label {width: 40%;
-	text-align: right;}	
+	text-align: right;
+	overflow-wrap: break-word;}	
 .logic-option > label > span {margin: 0 5px;
 	width: 150px !important;
 	text-align: left;}
