--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -330,6 +330,10 @@
 .option-list {/*display: inline-block;
     max-width: 90%;
     padding: 0;*/}
+    
+.other-option-text-div {margin-left: 30px;
+	width: 90%;
+	margin-top: 5px;}
 
 /* Matrix */
 #form-question table{
