--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -1028,13 +1028,13 @@ ul.pagination li.active a {color: #fff !important;}
     border: none;
     margin-bottom: 5px;}
     
-.question-type-aux {background-color: #f5f5f5 !important;
+.question-type-aux {background-color: #4a4a4a !important;
 	margin-top: 0px !important;
 	margin-bottom: 0px !important;
-	border-color: #4a4a4a !important;
-	border: 1px solid;
 	border-radius: 4px;
-	height: 24px;
+	padding: 2px;
+	font-weight: bold;
+	color: #fff;
 }
 
 .likert-options {display: inline-flex;
@@ -1346,6 +1346,12 @@ div.rules-frame > div.nav-config > ul > li > button.active > span {background-co
 .type-tittle{
 	margin-top: 1px !important;
 	margin-bottom: 4px;
+	text-align: right;
+	width: 100%;
+}
+.type-simple-answer{
+	height: 25px !important;
+	padding: 1px 12px !important;
 }
 
 .mandatory-button{
@@ -1362,6 +1368,7 @@ div.rules-frame > div.nav-config > ul > li > button.active > span {background-co
     min-height:30px !important;}
     
 .question-options {background-color: #C8C8C8;
+	color: #4a4a4a;
     /*padding: 1.5%;*/
     padding: 15px 15px 10px 15px !important;
     margin-top: -4px !important;
