--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -519,7 +519,8 @@ td.actions ul li a span {width: 100%;
 .remove-frame-buttons {width: 70%;
 	margin: 5px auto;}
 .btn-accept-remove-element,
-.btn-accept-move-element {float:right;}
+.btn-accept-move-element,
+.btn-accept-change-sqType {float:right;}
 .survey-frame {border: 1px solid #555;
 	margin: 10px 0px;
 	padding: 20px 15px;
@@ -1111,6 +1112,7 @@ ul.pagination li.active a {color: #fff !important;}
     height: 28px !important;
     padding: 0 !important;}
 .option-icons button {margin: 0px 3px;}
+.remove-option-other {margin: 0px 1px !important;}
 .btn-plus-small {font-size: 1.3em;}
 .btn-plus-small:hover {cursor:pointer;}
 .routes-select {display: flex;}
