--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -520,7 +520,8 @@ td.actions ul li a span {width: 100%;
 	margin: 5px auto;}
 .btn-accept-remove-element,
 .btn-accept-move-element,
-.btn-accept-change-sqType {float:right;}
+.btn-accept-change-sqType,
+.btn-accept-change-qScaleType {float:right;}
 .survey-frame {border: 1px solid #555;
 	margin: 10px 0px;
 	padding: 20px 15px;
